--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br>
 
         <main>
-            <h1 class="centralizado">Poemas</h1>
+            <h1 class="titulo-principal">Poemas</h1>
 
             <br>
 
