--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>dark_cat_poems</title>
         <link rel="stylesheet" href="/styles/reset.css">
         <link rel="stylesheet" href="/styles/style-index.css">
