--- a/sub-pages/cadastro.html
+++ b/sub-pages/cadastro.html
@@ -9,6 +9,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>dark_cat_poems</title>
         <link rel="stylesheet" href="/styles/reset.css">
         <link rel="stylesheet" href="/styles/style-forms.css">
@@ -40,7 +41,7 @@
         <br>
 
         <main>
-            <h1>Faça o Cadastro</h1>
+            <h1 class="titulo-principal">Faça o Cadastro</h1>
 
             <form>
                 <label for="email" class="label">Endereço de e-mail</label>
