--- a/sub-pages/sobre_mim.html
+++ b/sub-pages/sobre_mim.html
@@ -8,6 +8,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>dark_cat_poems</title>
         <link rel="stylesheet" href="/styles/reset.css">
         <link rel="stylesheet" href="/styles/style-sobre_mim.css">
@@ -46,7 +47,7 @@
             <br>
 
             <div>
-                <img src="/images/dark cat poems.png">
+                <img class="logo_dark_cat_poems" src="/images/dark cat poems.png">
 
                 <ul class="sobre-mim">
                     <li>Theo Kenzo</li>
@@ -58,7 +59,7 @@
 
             <br>
 
-            <img src="/images/RPG_DARK.png" class="centralizado">
+            <img class="pixel_art" src="/images/RPG_DARK.png">
         </main>
 
         <br>
