--- a/sub-pages/login.html
+++ b/sub-pages/login.html
@@ -48,6 +48,11 @@
 				<input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com.br">
                 <label for="senha" class="label">Senha</label>
 				<input type="password" id="senha" class="input-padrao" required placeholder="************">
+                <p>
+                    Lembrar E-mail &nbsp
+                    <input type="radio" value="lembrar-email">
+                </p>
+                
                 <input type="submit" value="Entrar " class="enviar">
             </form>
         </main>
